--- a/public/assets/style.css
+++ b/public/assets/style.css
@@ -30,3 +30,23 @@ padding: 10px;
 height: 100px;
 width: 100px;
 }
+
+.formbody{
+background-color: rgb(241, 241, 241)!important;
+padding: 20px;
+border-radius: 5px;
+box-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1),
+        0 2px 4px -2px rgb(0 0 0 / 0.1);
+}
+.formbody:hover{
+box-shadow: 0 4px 8px 0 rgba(247, 247, 247, 0.2), 0 6px 10px 0 rgba(0, 0, 0, 0.11);
+}
+.forgetpass{
+display: flex;
+justify-content: space-between;
+flex-direction: row;
+}
+.text-align-right
+{
+    text-align: right;
+}
